--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,11 @@
 ---
-version: "3.7"
+version: "3"
 services:
   song-stitch:
      build:
        context: .
      image: songstitch/song-stitch
+     ports:
+       - 8080:8080
+     volumes:
+       - .env:/app/.env
