Remove vet and just use staticcheck

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Install dependencies
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
-      - name: vet and lint
+      - name: staticcheck
         run: |
-          go vet ./...
+          go install honnef.co/go/tools/cmd/staticcheck@latest
           staticcheck ./...
