Add spotify client with authentication

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 LASTFM_ENDPOINT="http://ws.audioscrobbler.com/2.0/"
 LASTFM_API_KEY="YOUR_API_KEY"
 APP_ENV="development"
+# optional - use spotify images as a backup
+SPOTIFY_CLIENT_ID="YOUR_API_KEY"
+SPOTIFY_CLIENT_SECRET="YOUR_API_KEY"
