--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 LASTFM_ENDPOINT="http://ws.audioscrobbler.com/2.0/"
 LASTFM_API_KEY="YOUR_API_KEY"
-ENVIRONMENT="development"
+APP_ENV="development"
