--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   song-stitch:
     build:
       context: .
-    image: songstitch/song-stitch
+      dockerfile: Dockerfile
     ports:
       - 8080:8080
     volumes:
