Persist form data

--- a/ui/package.json
+++ b/ui/package.json
@@ -24,6 +24,7 @@
     "watch": "^0.13.0"
   },
   "dependencies": {
+    "@felte/extender-persist": "^1.0.15",
     "@felte/validator-zod": "^1.0.16",
     "felte": "^1.2.11",
     "zod": "^3.21.4"
