remove prettier ci due to bug in the action
https://github.com/creyD/prettier_action/issues/111

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,14 +49,13 @@ jobs:
           go install honnef.co/go/tools/cmd/staticcheck@latest
           staticcheck ./...
 
-  prettier:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ github.head_ref }}
-      - name: Prettify code
-        uses: creyD/prettier_action@v4.3
-        with:
-          prettier_options: --check */*.{js,css,html}
+  # prettier:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #     - name: Prettify code
+  #       uses: creyD/prettier_action@v4.3
+  #       with:
+  #         prettier_options: --check ui/**/*.{js,css,html}
+  #         prettier_plugins: prettier-plugin-svelte
