--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,11 +38,13 @@ jobs:
         with:
           go-version: '1.20'
 
+      - name: Install Dependencies
+        run: |
+          sudo apt-get install -y libwebp-dev
+          go install honnef.co/go/tools/cmd/staticcheck@latest
+
       - name: build
         run: go build cmd/*go
-
-      - name: Install dependencies
-        run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
       - name: staticcheck
         run: |
