Fix deployment build by specifying architecture

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
-      - run: flyctl deploy --remote-only
+      - run: flyctl deploy --remote-only --build-arg ARCH=x86_64
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
 
