--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,15 +71,16 @@ jobs:
     permissions:
       contents: read
       packages: write
-      id-token: write 
+      id-token: write
     env:
       IMAGE_NAME: songstitch
       IMAGE_REGISTRY: ghcr.io
       IMAGE_REPOSITORY: songstitch
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Set BUILD_ARCH env
+        run: echo "BUILD_ARCH=$(uname -m)" >> $GITHUB_ENV
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
@@ -109,3 +110,5 @@ jobs:
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          build-args: |
+            "ARCH=${{env.BUILD_ARCH}}"
