--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -130,8 +130,7 @@ jobs:
   test:
     name: Run Smoke Test
     runs-on: ubuntu-latest
-    #needs: deploy
-    #if: github.ref == 'refs/heads/main'
+    needs: deploy
     steps:
       - uses: actions/checkout@v3
       - name: Set up Go
