--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,6 @@ jobs:
     name: runner / misspell
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code.
         uses: actions/checkout@v3
       - name: misspell
         uses: reviewdog/action-misspell@v1
@@ -27,7 +26,32 @@ jobs:
         with:
           dockerfile: Dockerfile
 
-  build:
+  gosec:
+    runs-on: ubuntu-latest
+    env:
+      GO111MODULE: on
+    steps:
+        uses: actions/checkout@v3
+      - name: Run Gosec Security Scanner
+        uses: securego/gosec@master
+        with:
+          args: ./...
+
+  prettier:
+    runs-on: ubuntu-latest
+    steps:
+        uses: actions/checkout@v3
+      - name: Set up npm
+        uses: actions/setup-node@v3
+      - name: Install dependencies
+        working-directory: ./ui
+        run: npm install
+      - name: Prettify code
+        working-directory: ./ui
+        run: npm run prettier
+
+
+  test-build:
     name: runner / Go package
     runs-on: ubuntu-latest
     steps:
@@ -51,20 +75,6 @@ jobs:
           go install honnef.co/go/tools/cmd/staticcheck@latest
           staticcheck ./...
 
-  prettier:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up npm
-        uses: actions/setup-node@v3
-      - name: Install dependencies
-        working-directory: ./ui
-        run: npm install
-      - name: Prettify code
-        working-directory: ./ui
-        run: npm run prettier
-
   build-push-songstitch:
     name: Build and Push SongStitch Image
     runs-on: ubuntu-latest
@@ -77,7 +87,6 @@ jobs:
       IMAGE_REGISTRY: ghcr.io
       IMAGE_REPOSITORY: songstitch
     steps:
-      - name: Checkout code
         uses: actions/checkout@v3
       - name: Docker meta
         id: meta
