--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,6 +27,7 @@ jobs:
           dockerfile: Dockerfile
 
   gosec:
+    name: runner / gocheck
     runs-on: ubuntu-latest
     env:
       GO111MODULE: on
@@ -38,6 +39,7 @@ jobs:
           args: ./...
 
   prettier:
+    name: runner / prettier
     runs-on: ubuntu-latest
     steps:
         uses: actions/checkout@v3
@@ -76,7 +78,7 @@ jobs:
           staticcheck ./...
 
   build-push-songstitch:
-    name: Build and Push SongStitch Image
+    name: runner / Build and Push SongStitch Image
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -119,7 +121,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   deploy:
-    name: Deploy app
+    name: runner / Deploy app
     runs-on: ubuntu-latest
     needs: build-push-songstitch
     if: github.ref == 'refs/heads/main'
@@ -137,7 +139,7 @@ jobs:
           cf_auth: ${{ secrets.CLOUDFLARE_TOKEN }}
 
   test:
-    name: Run Smoke Test
+    name: runner / Smoke Test
     runs-on: ubuntu-latest
     needs: deploy
     steps:
