--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,7 +7,7 @@ jobs:
     name: runner / misspell
     runs-on: ubuntu-latest
     steps:
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: misspell
         uses: reviewdog/action-misspell@v1
         with:
@@ -32,7 +32,7 @@ jobs:
     env:
       GO111MODULE: on
     steps:
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Run Gosec Security Scanner
         uses: securego/gosec@master
         with:
@@ -42,7 +42,7 @@ jobs:
     name: runner / prettier
     runs-on: ubuntu-latest
     steps:
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Set up npm
         uses: actions/setup-node@v3
       - name: Install dependencies
@@ -89,7 +89,7 @@ jobs:
       IMAGE_REGISTRY: ghcr.io
       IMAGE_REPOSITORY: songstitch
     steps:
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
