--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,8 +7,7 @@ jobs:
     name: runner / misspell
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code.
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: misspell
         uses: reviewdog/action-misspell@v1
         with:
@@ -27,7 +26,34 @@ jobs:
         with:
           dockerfile: Dockerfile
 
-  build:
+  gosec:
+    name: runner / gocheck
+    runs-on: ubuntu-latest
+    env:
+      GO111MODULE: on
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run Gosec Security Scanner
+        uses: securego/gosec@master
+        with:
+          args: -severity medium  ./...
+
+  prettier:
+    name: runner / prettier
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up npm
+        uses: actions/setup-node@v3
+      - name: Install dependencies
+        working-directory: ./ui
+        run: npm install
+      - name: Prettify code
+        working-directory: ./ui
+        run: npm run prettier
+
+
+  test-build:
     name: runner / Go package
     runs-on: ubuntu-latest
     steps:
@@ -51,22 +77,8 @@ jobs:
           go install honnef.co/go/tools/cmd/staticcheck@latest
           staticcheck ./...
 
-  prettier:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Set up npm
-        uses: actions/setup-node@v3
-      - name: Install dependencies
-        working-directory: ./ui
-        run: npm install
-      - name: Prettify code
-        working-directory: ./ui
-        run: npm run prettier
-
   build-push-songstitch:
-    name: Build and Push SongStitch Image
+    name: runner / Build and Push SongStitch Image
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -77,8 +89,7 @@ jobs:
       IMAGE_REGISTRY: ghcr.io
       IMAGE_REPOSITORY: songstitch
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
@@ -110,7 +121,7 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
 
   deploy:
-    name: Deploy app
+    name: runner / Deploy app
     runs-on: ubuntu-latest
     needs: build-push-songstitch
     if: github.ref == 'refs/heads/main'
@@ -128,7 +139,7 @@ jobs:
           cf_auth: ${{ secrets.CLOUDFLARE_TOKEN }}
 
   test:
-    name: Run Smoke Test
+    name: runner / Smoke Test
     runs-on: ubuntu-latest
     needs: deploy
     steps:
