add configuration struct and more configuration options

--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,13 @@ APP_ENV="development"
 # optional - use spotify images as a backup
 SPOTIFY_CLIENT_ID="YOUR_API_KEY"
 SPOTIFY_CLIENT_SECRET="YOUR_API_KEY"
+# Collage configuration
+ALBUM_MAX_IMAGES=400
+ARTIST_MAX_IMAGES=100
+TRACK_MAX_IMAGES=25
+# Set the cutoffs for the image sizes.
+# That is, if the number of images in the collage is less than this number,
+# it will use the image size specified.
+IMAGE_SIZE_CUTOFF_EXTRA_LARGE=100 # If less than 100 images, use the extra large images
+IMAGE_SIZE_CUTOFF_LARGE=1000
+IMAGE_SIZE_CUTOFF_MEDIUM=2000
