Feat/add swap and dev env (#131)
* feat: add dev environment on fly.io

* feat: add swap in prod and deploy dev in makefile

* up swap space to 1gb in prod

--- a/fly.dev.toml
+++ b/fly.dev.toml
@@ -3,9 +3,9 @@
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "songstitch"
+app = "songstitch-dev"
 primary_region = "iad"
-swap_size_mb = 1024
+swap_size_mb = 512
 
 [http_service]
   internal_port = 8080
