--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,32 +1,32 @@
 version: 2
 updates:
-  - package-ecosystem: "docker"
-    directory: "/"
+  - package-ecosystem: 'docker'
+    directory: '/'
     schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "Australia/Sydney"
+      interval: 'daily'
+      time: '09:00'
+      timezone: 'Australia/Sydney'
     ignore:
-      - dependency-name: "*"
-        update-types: ["version-update:semver-major"]
+      - dependency-name: '*'
+        update-types: ['version-update:semver-major']
 
-  - package-ecosystem: "github-actions"
-    directory: "/"
+  - package-ecosystem: 'github-actions'
+    directory: '/'
     schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "Australia/Sydney"
+      interval: 'daily'
+      time: '09:00'
+      timezone: 'Australia/Sydney'
 
-  - package-ecosystem: "npm"
-    directory: "/ui"
+  - package-ecosystem: 'npm'
+    directory: '/ui'
     schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "Australia/Sydney"
+      interval: 'daily'
+      time: '09:00'
+      timezone: 'Australia/Sydney'
 
-  - package-ecosystem: "gomod"
-    directory: "/"
+  - package-ecosystem: 'gomod'
+    directory: '/'
     schedule:
-      interval: "daily"
-      time: "09:00"
-      timezone: "Australia/Sydney"
+      interval: 'daily'
+      time: '09:00'
+      timezone: 'Australia/Sydney'
