--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -25,6 +25,7 @@ updates:
       timezone: 'Australia/Sydney'
 
   - package-ecosystem: 'gomod'
+    vendor: true
     directory: '/'
     schedule:
       interval: 'daily'
