re-add directory

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -26,6 +26,7 @@ updates:
 
   - package-ecosystem: 'gomod'
     vendor: true
+    directory: '/'
     schedule:
       interval: 'daily'
       time: '09:00'
