--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -164,7 +164,7 @@ jobs:
   test-dev:
     name: runner / Smoke Test Dev
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: deploy-dev
     steps:
       - uses: actions/checkout@v4
       - name: Set up Go
@@ -174,7 +174,7 @@ jobs:
       - name: Run Tests
         run: TEST_DOMAIN=songstitch-dev.fly.dev make test
 
-  deploy:
+  deploy-prod:
     name: runner / Deploy app
     runs-on: ubuntu-latest
     needs: build-push-songstitch
@@ -195,7 +195,7 @@ jobs:
   test-prod:
     name: runner / Smoke Test
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: deploy-prod
     steps:
       - uses: actions/checkout@v4
       - name: Set up Go
