--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -161,7 +161,20 @@ jobs:
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN_DEV }}
 
-  deploy:
+  test-dev:
+    name: runner / Smoke Test Dev
+    runs-on: ubuntu-latest
+    needs: deploy-dev
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Go
+        uses: actions/setup-go@v4
+        with:
+          go-version: '1.21'
+      - name: Run Tests
+        run: TEST_DOMAIN=songstitch-dev.fly.dev make test
+
+  deploy-prod:
     name: runner / Deploy app
     runs-on: ubuntu-latest
     needs: build-push-songstitch
@@ -179,10 +192,10 @@ jobs:
           cf_zone: ${{ secrets.CLOUDFLARE_ZONE }}
           cf_auth: ${{ secrets.CLOUDFLARE_TOKEN }}
 
-  test:
+  test-prod:
     name: runner / Smoke Test
     runs-on: ubuntu-latest
-    needs: deploy
+    needs: deploy-prod
     steps:
       - uses: actions/checkout@v4
       - name: Set up Go
