ensure golines checks on the CI

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -84,7 +84,12 @@ jobs:
       - name: golines
         run: |
           go install github.com/segmentio/golines@latest
-          golines --write-output --ignored-dirs=vendor .
+          files=$(golines --ignored-dirs=vendor . --list-files)
+          if [ -n "${files}" ]; then
+            echo "The following files need reformatting:"
+            echo "${files}"
+            exit 1
+          fi
 
   go-test-build:
     name: runner / Go Test Build
