add a test to ensure the query parsing is correct

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -104,6 +104,9 @@ jobs:
       - name: build
         run: go build cmd/*go
 
+      - name: test
+        run: go test ./...
+
   build-push-songstitch:
     name: runner / Build and Push SongStitch Image
     runs-on: ubuntu-latest
