Organization typo ignore

--- a/.typos.toml
+++ b/.typos.toml
@@ -7,6 +7,7 @@ optimize = "optimize"
 optimized = "optimized"
 optimizeLegibility = "optimizeLegibility"
 Authorization = "Authorization"
+Organization = "Organization"
 
 [files]
 ignore-vcs = true
